--- a/style.css
+++ b/style.css
@@ -1,3 +1,77 @@
 * {
   box-sizing: border-box;
 }
+
+.container {
+  position: absolute;
+  width: 550px;
+  height: 868px;
+  left: 4px;
+  top: 4px;
+  background: #23252c;
+}
+
+main > img {
+  position: absolute;
+  width: 317px;
+  /*height: 317px;*/
+  left: 116px;
+  top: 44px;
+  border-radius: 10px 10px 0px 0px;
+}
+
+main > h1 {
+  position: absolute;
+  width: 178.06px;
+  height: 25.81px;
+  left: 186px;
+  top: 382px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+main > p {
+  position: absolute;
+  width: 178.06px;
+  height: 14.19px;
+  left: 186px;
+  top: 414px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.8px;
+  line-height: 15px;
+  text-align: center;
+
+  color: #f3bf99;
+}
+
+main > .button1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 13px 9px 11px;
+
+  position: absolute;
+  width: 247px;
+  height: 34px;
+  left: 151px;
+  top: 469px;
+
+  background: #ffffff;
+
+  border: 1px solid #d1d5db;
+  box-sizing: border-box;
+
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
